cashiers-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cashiers-app-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: cashiers-app
  replicas: 4 # tells deployment to run 4 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: cashiers-app
    spec:
      containers:
      - name: cashiers-app
        image: xbtamsing/cashiers-app:v2
        ports:
        - containerPort: 9090
